ros2_ws/Lab3_ws/log/build_2025-03-13_12-24-03/task_4/stderr.log
  File "/home/me597/me597-tgobel/ros2_ws/Lab3_ws/install/task_4/lib/python3.10/site-packages/task_4/auto_navigator.py", line 27
    package_path = /home/me597/me597-tgobel/ros2_ws/Lab3_ws/task_4
                   ^
SyntaxError: invalid syntax

